--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,8 +8,8 @@ jobs:
   deploy-codigofacilito:
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v4
-      run: echo "Hacemos un pull del codigo"
-      run: echo "Correr migraciones"
-      run: echo "Generar Binario"
-      run: echo "Publicar version" 
+      - uses: actions/checkout@v4
+      - run: echo "Hacemos un pull del codigo"
+      - run: echo "Correr migraciones"
+      - run: echo "Generar Binario"
+      - run: echo "Publicar version"
