--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,7 @@ on:
     branches: ["master"]
 
 jobs:
-  deploy-codigofacilito:
+  1_deploy-codigofacilito:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -13,3 +13,10 @@ jobs:
       - run: echo "Correr migraciones"
       - run: echo "Generar Binario"
       - run: echo "Publicar version"
+
+  2_deploy-codigofacilito:
+    needs: 1_deploy-codigofacilito
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo "segundo job"
